[package]
name = "accord"
version = "0.1.0"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.4.1"
futures = "0.3.5"
mime = "0.3.16"
regex = "1.3.9"
serde = "1.0.114"
serde_json = "1.0.57"
thiserror = "1.0.20"
tide-tracing = "0.0.5"
tracing = "0.1.18"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.10"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "tokio02", "unstable"]

[dependencies.isahc]
version = "0.9.8"
features = ["json"]

[dependencies.tide]
version = "0.13.0"
default-features = false
features = ["h1-server"]

[dependencies.twilight]
branch = "trunk"
git = "https://github.com/twilight-rs/twilight.git"
