[package]
name = "passcod-accord"
version = "0.0.3"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

description = "Discord API client to power Discord API clients via the power of love, friendship, and HTTP"
documentation = "https://github.com/passcod/accord/#readme"
license-file = "LICENSE"
keywords = ["discord", "http"]

default-run = "accord"

[lib]
name = "accord"

[dependencies]
async-channel = "1.4.1"
futures = "0.3.5"
mime = "0.3.16"
regex = "1.3.9"
serde = "1.0.114"
serde_json = "1.0.57"
thiserror = "1.0.20"
tide-tracing = "0.0.5"
tracing = "0.1.18"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.10"
twilight-cache-inmemory = "0.1.0"
twilight-gateway = "0.1.0"
twilight-http = "0.1.0"
twilight-model = "0.1.0"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "tokio02", "unstable"]

[dependencies.isahc]
version = "0.9.8"
features = ["json"]

[dependencies.tide]
version = "0.13.0"
default-features = false
features = ["h1-server"]
