[package]
name = "passcod-accord"
version = "0.0.10"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2018"

description = "Discord API client to power Discord API clients via the power of love, friendship, and HTTP"
documentation = "https://github.com/passcod/accord/#readme"
license-file = "LICENSE"
keywords = ["discord", "http"]

default-run = "accord"

[lib]
name = "accord"

[dependencies]
async-channel = "1.5.1"
futures = "0.3.7"
mime = "0.3.16"
regex = "1.4.2"
serde = "1.0.117"
serde_json = "1.0.59"
thiserror = "1.0.22"
tide-tracing = "0.0.9"
tracing = "0.1.21"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
twilight-cache-inmemory = "0.2.0"
twilight-gateway = "0.2.1"
twilight-http = "0.2.1"
twilight-model = "0.2.0"

[dependencies.async-std]
version = "1.6.5"
features = ["attributes", "tokio02", "unstable"]

[dependencies.isahc]
version = "^0.9.13"
features = ["json"]

[dependencies.tide]
version = "0.16.0"
default-features = false
features = ["h1-server"]
